# jupyterlab-starters

./: .editorconfig  .eslintignore  .eslintrc.js  .gitignore  .prettierignore  .prettierrc  .readthedocs.yml  .yarnrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  anaconda-project.yml  azure-pipelines.yml  dodo.py  environment.yml  jupyter_notebook_config.json  jupyter_server_config.json  package.json  postBuild  pylintrc  pyproject.toml  rebuild.sh  setup.cfg  setup.py  tsconfig.eslint.json  tsconfigbase.json
.binder/: overrides.json  postBuild
.github/: .condarc  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_request.md
.github/specs/: _base.yml  atest.yml  binder.yml  build.yml  docs.yml  lab.yml  lab3.5.yml  lab3.6.yml  lint.yml  lock.yml  node.yml  py3.10.yml  py3.6.yml  py3.7.yml  py3.9.yml  run.yml  utest.yml
.github/workflows/: ci.yml
atest/: 00_Smoke.robot  01_Launcher.robot  01_Simple.robot  02_Simple.robot  03_Parameters.robot  04_Cookiecutter.robot  05_Notebook.robot  06_Notebook_Metadata.robot  07_Copy_and_Continue.robot  08_Tree_URL.robot  CodeMirror.resource  CodeMirror.robot  Keywords.resource  Keywords.robot  Variables.resource  Variables.robot  __init__.robot  ports.py
atest/RJSF/: 00_Form_And_Editor.robot  __init__.robot
atest/etc/: jupyter_notebook_config.json  jupyter_server_config.json
atest/lab/: 00_Smoke.robot  01_Launcher.robot  02_Simple.robot  03_Parameters.robot  04_Cookiecutter.robot  05_Notebook.robot  06_Notebook_Metadata.robot  07_Copy_and_Continue.robot  08_Tree_URL.robot  __init__.robot
atest/lite/: 00_Smoke.robot  01_Todo.robot  Keywords.resource  __init__.robot
ci/: env-lint.yml  env-test.yml.in  job.lint.yml  job.test.yml  steps.conda.yml
docs/: api.rst  conf.py  environment.yml  index.ipynb  rtd.txt  rtd.yml
docs/_static/: copybutton.css  copybutton.js
docs/_static/css/: custom.css
docs/_templates/: demo.html
docs/notebooks/: Developers.ipynb  History.ipynb  JupyterLite.ipynb  Packaging.ipynb  REST API.ipynb  Starters.ipynb  Use Cases.ipynb  Users.ipynb
examples/: Multi-Stage Starter Notebook.ipynb  No-Op Notebook.ipynb  Starter Notebook.ipynb  whitepaper-single.ipynb  whitepaper.ipynb
examples/cookiecutter/: cookiecutter.json
examples/cookiecutter/{{ cookiecutter.idea_size }} Idea/: index.ipynb
examples/jupyterlab-rjsf/: todos.json  todos.schema.alt.json  todos.schema.json  todos.ui.alt.json  todos.ui.json
examples/jupyterlab-rjsf-yaml/: todos.instance.yaml  todos.schema.yaml
examples/rjsf/: README.ipynb  todos.json  todos.ui.alt.json
examples/whitepaper-multiple/: 00 Introduction.ipynb  10 What are you trying to do.ipynb  20 How is it done today.ipynb  30 What is new in your approach.ipynb  40 Who cares.ipynb  50 What are the risks.ipynb  60 How much will it cost.ipynb  70 How long will it take.ipynb  80 What are the mid-term and final exams.ipynb
lite/: jupyter-lite.json  jupyter_lite_config.json  overrides.json
scripts/: atest.py  combine.py  docs.py  hacked-labextension.py  integrity.py  lint.py  nblint.py  preflight.py  release.py  upload.py  utest.py
src/jupyter_starters/: __init__.py  _json.py  _version.py  app.py  handlers.py  json_.py  manager.py  serverextension.py  trait_types.py  types.py
src/jupyter_starters/_d/etc/jupyter/jupyter_server_config.d/: jupyter-starters-serverextension.json
src/jupyter_starters/etc/: install.json  jupyter-starters-serverextension.json
src/jupyter_starters/py_starters/: cookiecutter.py  notebook.py
src/jupyter_starters/schema/: v1.json  v1.py  v2.json  v2.py  v3.json  v3.py
src/jupyter_starters/tests/: conftest.py  test_cli.py  test_content.py  test_meta.py  test_notebook.py  test_src.py
