[build-system]
build-backend = "flit_core.buildapi"
requires = [
  "flit_core<4,>=3.7.1",
]

[project]
name = "jupyter_starters"
version = "2.0.0a0"
readme = "README.md"
authors = [
    {name = "jupyter-starters contributors", email = "deathbeds@googlegroups.com"},
]
requires-python = ">=3.8"
dependencies = [
    "jupyterlab >=3",
    "jupyter-client >=6.1.0",
]
dynamic = [
  "description",
]
classifiers = [
    "Framework :: Jupyter :: JupyterLab :: 3",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
]

[project.urls]
"Bug Tracker" = "https://github.com/deathbeds/jupyterlab-starters/issues"
"Changelog" = "https://github.com/deathbeds/jupyterlab-starters/blob/main/CHANGELOG.md"
"Documentation" = "https://jupyterstarters.rtfd.io"
"Source" = "https://github.com/deathbeds/jupyterlab-starters"

[project.scripts]
jupyter-starters = "jupyter_starters.app:main"

[tool.flit.sdist]
include = ["src/jupyter_starters/_d"]

[tool.flit.external-data]
directory = "src/jupyter_starters/_d"

[tool.docformatter]
recursive = true
wrap-summaries = 88

[tool.doit]
backend = "sqlite3"
verbosity = 2

[tools.doit.commands.list]
status = true
subtasks = true

[tool.mypy]
cache_dir = "build/.mypy_cache"
sqlite_cache = true
# language settings
python_version = "3.8"
allow_redefinition = true
# check_untyped_defs = true
# disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "fastjsonschema",
    "fastjsonschema.*",
    "cookiecutter",
    "cookiecutter.*",
]
ignore_missing_imports = true
