[metadata]
name = jupyter_starters
version = 0.1.0
description = Parametrized starter files and folders for Jupyter
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/deathbeds/jupyterlab-starters
author = dead pixels collective
author_email = deathbeds@groups.google.com
license = BSD-3-Clause
keywords =
    Interactive
    Interpreter
    Shell
    Web
    Jupyter
    JupyterLab
classifiers =
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only

[options]
install_requires =
    notebook >=5.3
package_dir =
    = src
packages = find:
include_package_data = True
zip_safe = False

[options.packages.find]
where =
    src

[isort]
combine_as_imports = True
include_trailing_comma = True
line_length = 88
multi_line_output = 3

[flake8]
exclude = .git,__pycache__,envs,.ipynb_checkpoints,.mypy_cache
max-line-length = 88

[mypy-cookiecutter]
ignore_missing_imports = True

[mypy-fastjsonschema.*]
ignore_missing_imports = True

[mypy-notebook]
ignore_missing_imports = True

[mypy-notebook.*]
ignore_missing_imports = True

[mypy-pytest]
ignore_missing_imports = True

[mypy-jsonschema]
ignore_missing_imports = True

[mypy-jsonschema.*]
ignore_missing_imports = True

[mypy-jupyter_starters._json]
ignore_missing_imports = True
ignore_errors = True

[mypy-jupyter_core.*]
ignore_missing_imports = True

[mypy-jupyterlab.*]
ignore_missing_imports = True

[mypy-nbconvert.*]
ignore_missing_imports = True

[mypy-nbformat]
ignore_missing_imports = True

[mypy-ruamel.*]
ignore_missing_imports = True

[mypy-ruamel_yaml]
ignore_missing_imports = True

[mypy-traitlets.*]
ignore_missing_imports = True

[pycodestyle]
ignore = E203,W503
max-line-length = 88
