[metadata]
name = jupyter_starters
description = Parametrized starter files and folders for Jupyter
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/deathbeds/jupyterlab-starters
author = dead pixels collective
author_email = deathbeds@groups.google.com
license = BSD-3-Clause
keywords =
    Interactive
    Interpreter
    Shell
    Web
    Jupyter
    JupyterLab
classifiers =
    Framework :: Jupyter
    Framework :: Jupyter :: JupyterLab
    Framework :: Jupyter :: JupyterLab :: 3
    Framework :: Jupyter :: JupyterLab :: Extensions
    Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
python_requires = >=3.8
install_requires =
    jupyterlab >=3
    jupyter_client >=6.1.0
package_dir =
    = src
packages = find:
include_package_data = True
zip_safe = False

[options.packages.find]
where =
    src

[options.entry_points]
console_scripts =
    jupyter-starters = jupyter_starters.app:main

[isort]
profile = black
multi_line_output = 3
known_first_party = jupyter_starters

[mypy]
# Empty section required as of mypy 0.800;
# see https://github.com/python/mypy/issues/9940

[mypy-cookiecutter]
ignore_missing_imports = True

[mypy-cookiecutter.*]
ignore_missing_imports = True

[mypy-fastjsonschema.*]
ignore_missing_imports = True

[mypy-jupyter_server]
ignore_missing_imports = True

[mypy-jupyter_server.*]
ignore_missing_imports = True

[mypy-pytest]
ignore_missing_imports = True

[mypy-jsonschema]
ignore_missing_imports = True

[mypy-jsonschema.*]
ignore_missing_imports = True

[mypy-jupyter_starters.json_]
ignore_missing_imports = True
ignore_errors = True

[mypy-jupyter_client.*]
ignore_missing_imports = True

[mypy-jupyter_core.*]
ignore_missing_imports = True

[mypy-jupyterlab.*]
ignore_missing_imports = True

[mypy-nbconvert.*]
ignore_missing_imports = True

[mypy-nbformat]
ignore_missing_imports = True

[mypy-nbformat.*]
ignore_missing_imports = True

[mypy-ruamel.*]
ignore_missing_imports = True

[mypy-ruamel_yaml]
ignore_missing_imports = True

[mypy-traitlets.*]
ignore_missing_imports = True

[mypy-doit.*]
ignore_missing_imports = True

[mypy-doit]
ignore_missing_imports = True

[mypy-colorama]
ignore_missing_imports = True

[pycodestyle]
ignore = E203,W503
max-line-length = 88

[tool:pytest]
junit_family = xunit2
filterwarnings =
    ignore::PendingDeprecationWarning:pytest_check_links.*
